<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.moncada.carrerasolidariapalmones.MainActivity">
    <item
        android:id="@+id/action_infoCarrera"
        android:orderInCategory="10"
        android:title="@string/action_infoCarrera"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_agenda"
        android:orderInCategory="20"
        android:title="@string/action_agenda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recorrido"
        android:orderInCategory="30"
        android:title="@string/action_recorrido"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_inscripcion"
        android:orderInCategory="40"
        android:title="@string/action_inscripcion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_consultarTiempo"
        android:orderInCategory="50"
        android:title="@string/action_consultarTiempo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_galeria"
        android:orderInCategory="60"
        android:title="@string/action_galeria"
        app:showAsAction="never" />
</menu>
